# parallel_tr_from_quda

./: CMakeLists.txt  README.md
core/cuda/: CMakeLists.txt  transform_reduce.cu
core/cuda/include/: reducer.h  transformer.h
core/include/: transformer.h
include/: communicator_quda.h  complex_quda.h  cub_helper.hpp  enum_quda.h  float_vector.h  iterators.h  quda.h  quda_constants.h  quda_define.h.in  quda_internal.h  reducer.h  transform_reduce.h  transform_reduce_impl.h  tunable_nd.h  tunable_reduction.h  version.h
include/kernels/: reduce_init.hpp  transform_reduce.cuh  transform_reduce.hpp
include/targets/cuda/: fast_intdiv.h  kernel.h  reduction_kernel.h  target_device.h  tunable_kernel.h  warp_collective.h
include/targets/generic/: fast_intdiv.h
lib/: CMakeLists.txt  communicator_stack.cpp  interface_quda.cpp  timer.cpp  transform_reduce.cu  tune.cpp
lib/impl/: transform_reduce.cu
lib/targets/cuda/: CMakeLists.txt  comm_target.cpp  device.cpp  malloc.cpp
lib/targets/generic/: CMakeLists.txt
test/: build_test.sh  set_env.sh  transform_reduce_test.cpp  transform_reduce_test.cu
